k3s/apps/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
  - port: 80
    targetPort: 80
